# Covenant-Disclaimer

./: .gitignore  README.md
backend/: pyproject.toml
backend/apps/assets/: admin.py  face_recognition_service.py  models.py  serializers.py  urls.py  views.py
backend/apps/assets/migrations/: 0001_initial.py
backend/apps/core/: urls.py
backend/apps/disclaimer/: admin.py  apps.py  middleware.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/disclaimer/migrations/: 0001_initial.py
backend/apps/reports/: admin.py  apps.py  models.py  pdf_utils.py  serializers.py  urls.py  views.py
backend/apps/reports/migrations/: 0001_initial.py
backend/apps/users/: serializers.py  urls.py  views.py
backend/apps/users/management/commands/: check_user_permissions.py
backend/apps/users/migrations/: .gitkeep  0001_initial.py
backend/apps/utils/: pagination.py
backend/config/: .env.example  env.example  settings.py  urls.py
backend/locale/ar/LC_MESSAGES/: django.mo  django.po
frontend/: .env.example  env.example  index.html  package.json
frontend/public/css/: tailwind.css
frontend/src/: App.jsx  index.css  routes.jsx
frontend/src/components/: AssetReturnComponent.jsx  ContentWrapper.jsx  FaceRecognitionComponent.jsx  LanguageToggle.jsx  PaginationComponent.jsx  Reports.jsx
frontend/src/context/: LanguageContext.jsx  index.jsx
frontend/src/data/: dashboard-data.js
frontend/src/hooks/: useDashboard.js
frontend/src/layout/: ReportsDashboard.jsx  ReportsListSimple.jsx  ReportsRoutes.jsx  index.js
frontend/src/layouts/: auth.jsx  dashboard.jsx  index.js
frontend/src/lib/: api.js  api.jsx  assetApi.js  cameraManager.js  disclaimerApi.js  i18n.js  reportsApi.js
frontend/src/styles/: rtl.css
frontend/src/utils/: RequireAuth.jsx  RequireGuest.jsx  auth.js  authHelpers.js
(+25 files in other folders)
